# partial-differential-equations

./: .gitignore  1D Burger's equation, finite volume.ipynb  1D Burgers' equation, finite volume, central scheme.ipynb  1D Burgers' equation, finite volume.ipynb  1D Heat equation, Finite Difference, Euler method.ipynb  1D Heat equation, Finite Difference, Neumann BC.ipynb  1D Heat equation, Finite Difference, SciPy method.ipynb  1D Heat equation, Finite Difference, p1 MIT 2016.ipynb  1D convection equation, finite difference, SciPy integration.ipynb  1D heat equation, finite difference, SciPy integration.ipynb  1D heat equation, finite difference, direct method.ipynb  1D heat equation, finite difference, p1 MIT 2016.ipynb  1D wave equation, finite difference, SciPy integration.ipynb  2D Poisson equation, Finite Difference, BC.ipynb  2D Poisson equation, Finite Difference.ipynb  2D Poisson equation, finite difference, BC.ipynb  Diffusion Equation - Euler method - 1.ipynb  Euler's formula and Euler's Identity.ipynb  Heat equation, Finite Difference, Direct Method.ipynb  Heat equation, Finite Difference, Euler method.ipynb  Heat equation, Finite Difference, Neumann BC.ipynb  Heat equation, Finite Difference, SciPy method.ipynb  Heat equation, Finite Difference, p1 MIT 2016.ipynb  LICENSE  README.md  Solving ODE with SciPy.ipynb  Taylor expansion.ipynb  Truncation error analysis with Taylor expansions.ipynb  pyproject.toml  toc.py
assets/: 2d_discretization.fig  2d_discretization.pstex  2d_discretization.pstex_t  2d_discretization_gen.tex
notebook/: Fibonacci.ipynb  (+17 more)
(+16 files in other folders)
