[tool.poetry]
name = "partial-differential-equations"
version = "0.1.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <info@gilbertfrancois.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
notebook = "^6.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
